index.css
* {
    -webkit-box-sizing: border-box;
    -o-box-sizing: border-box;
    -ms-box-sizing:border-box;
    box-sizing: border-box;
    }

body {
    font-family: Noto;
    font-size: 1em;
    overflow: hidden;
    height: 100%;
    transition: all 1s ease;
    }

p
{
    font-weight: bold;
}

header a {
    text-decoration: none;
    color: black;
    font-weight: normal;
    font-size: 16px;
    display: block;
    width: 100%;
}

header a:hover{
    color: black;
    text-decoration: none;
}

h1 {
    text-align: center;
    }

section h1
{
    margin-top: 0%;
    padding-top: 3%;
    font-size: 30pt;
    background-color: RGBA(248, 248, 248, 0.5);
}

h2 {
    color: #C83200;
    float: left;
    position: relative;
    text-align: center;
    width: 30%;
    display: block;
    margin: 0 auto;
    padding-top: 5px;
    }

#down {
    font-size: 1em;
    color: #F00
    }

main {
    position: relative;
    z-index: 8;
    overflow: hidden;
    width: 100%;
    left: 0px;
    top: 0px;
    max-width: 1920px;
    margin: auto auto;
    opacity: 0;
    transition: all 1s ease;
    }

section {
    position: relative;
    padding: 0;
    }

.mainbackground
{
    background-image: url("img/startseite.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    z-index: 2;
}

.mainbackground article
{
    margin-top: 15%;
    opacity: 0;
    transition: all 1s ease;
}

.wrapper 
{
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0px;
   left: 0px;
   margin: 0px;
}

header {
    opacity: 0;
    position: fixed;
    z-index: 9;
    top: 5px;
    left: 0px;
    background: none repeat scroll 0% 0%;
    width: 100%;
    max-width: 1920px;
    height: 95px;
    -ms-transform: translatez(0px);
    -o-transform: translatez(0px);
    -webkit-transform: translatez(0px);
    transform: translatez(0px);
    overflow: hidden;
    transition: all 1s 0.5s ease;
    /*-moz-transition: -moz-transform 2s ease;
    -o-transition: -o-transform 2s ease;
    -webkit-transition: -webkit-transform 2s ease;
    transition: transform 2s ease;
    transform-style: preserve-3d*/
    }

.header {
    position: relative;
    width: 90%;
    height: 100%;
    -moz-transform: translatey(0%);
    -ms-transform: translatey(0%);
    -o-transform: translatey(0%);
    -webkit-transform: translatey(0%);
    transform: translatey(0%);
    /*overflow: hidden;*/
    -moz-transition: -moz-transform 2s ease;
    -o-transition: -o-transform 2s ease;
    -webkit-transition: -webkit-transform 2s ease;
    transition: transform 1.5s cubic-bezier(.19,1,.22,1);

    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    -ms-transform-style: none;
    transform-style: preserve-3d;

    /*-ms-perspective-origin: 50% 50%;*/

    margin: 0px auto;

    word-wrap: break-word;

    backface-visibility: hidden;
    }


#middle {
    font-size: 1em;
    color: white;
    }

#down {
    font-size: 24px;
    color: #C83200;
    }



.frontheader 
{
    position: absolute;
    width: 100%;
    height: 100%;
    top: auto;
    -moz-transform: translatez(20px);
    -ms-transform: translatez(20px);
    -o-transform: translatez(20px);
    -webkit-transform: translatez(20px);
    transform: translatez(20px);
    background-color: rgba(255, 255, 255, 0.6);
    border-color: white;
    backface-visibility: hidden;

    -moz-transition: -moz-transform 2s ease;
    -o-transition: -o-transform 2s ease;
    -webkit-transition: -webkit-transform 2s ease;
    transition: transform 2s ease;
}

.smaller-header 
{
    -moz-transform: rotatex(89deg) translatey(-2200px) scalex(1) scalez(1);
    -ms-transform: rotatex(89deg);
    -o-transform: rotatex(89deg) translatey(-2200px) scalex(1) scalez(1);
    -webkit-transform: rotatex(89deg) translatey(-2200px) scalex(1) scalez(1);
    transform: rotatex(89deg) translatey(-1500px) scalex(1) scalez(1);
}

.contactheader
{
    transform: rotatey(-90deg) rotatez(90deg) translatex(27px) translatez(46px);
    width: 8%;
    background-color: rgba(255, 255, 255, 0.6);
    height: 40px;
    line-height: 30px;
}

.impressum a
{
    height: 100%;
}

.impressum
{
    text-align: center;
}

.impressum:hover
{
    border-bottom: 4px #DD3700 solid;
}

.side-header
{
    transform: rotatey(65deg) rotatex(86deg) translatez(14px) rotatez(-2deg) !important;
}

#mainlogo, #mainlogo1
{
    position: relative;
    width: 30%;
    border-collapse: collapse;
    border: 2px solid black;
    margin: 0px;
    float: left;
    margin-top: 0.5%;
    font-family: arial;
    text-align: center;
}

#mainlogo th, #mainlogo1 th
{
    font-size: 1.2em;
    font-weight: 900;
    width: 25%;
    border-bottom: 2px solid black;
    border-right: 2px solid black;
    margin: 0px;
    background: white;
}

#mainlogo tbody th:first-child, #mainlogo1 tbody th:first-child
{
    background: #DD3700;
    width: 25%;
    color: white;
}

#mainlogo tbody th:last-child, #mainlogo1 tbody th:last-child
{
    background: #DD3700;
    width: 25%;
    color: white;
    border-right: none;
}

#mainlogo td
{
    text-align: center;
    background: white;
    font-weight: 500;
    font-size: 16px;
}

nav
{
    width: 100%;
    height: 50%;
}

.bottomheader 
{
    position: absolute;
    width: 100%;
    top: 49px;
    height: 40px;
    -ms-transform: translateY(0px) rotateX(90deg);
    -o-transform: rotatex(-90deg) translatez(-25px);
    -webkit-transform: rotatex(-90deg) translatez(25px);
    transform: rotatex(-90deg) translatez(25px) translatey(0px);
    background-color: rgba(255, 255, 255, 0.6);
    border-color: white;
    backface-visibility: hidden;

    -webkit-transition: transform 2s ease;
    -o-transition: transform 2s ease;
    transition: transform 2s ease;
}

.bottomheader-rotate
{
    -webkit-transform: rotateX(0deg);
    -ms-transform: rotateX(0deg) translatey(-43px) !important;
    -o-transform: rotateX(0deg);
    transform: rotateX(0deg);
}
/* ... */

